2007-01-23  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* src/de/schlund/pfixcore/editor2/core/spring/ProjectFactoryServiceImpl.java (init): 
	* src/de/schlund/pfixcore/editor2/frontend/util/EditorApplicationContextFactory.java: 
	Added code to handle missing <name> or <comment> tag within a project definition.
	Changed locking to ensure that an exception is thrown when the editor app is
	called but has not been initialized instead of dead-locking the thread.

2007-01-22  Martin Leidig  <mleidig@schlund.de>

	Added the optional IWrapper parameter attribute 'trim', which 
	provides the option to enable/disable the automatic trimming of 
	request parameters. The backwards compatible default behaviour, 
	in absence of the attribute, is to trim incoming parameters 
	before further processing (trim="true|false|on|off").

	* src/de/schlund/pfixcore/generator/IWrapperParam.java: made
	parameter trimming optional (can be set via trim argument of
	constructor)
	* src/de/schlund/pfixcore/generator/IWrapperIndexedParam.java:
	same as above
	* projects/core/build/iwrapper.xsl: trim attribute at param
	elements is evaluated and used as argument of for IWrapperParam 
	constructor
	* projects/core/schema/interfacewrapper200401.xsd: Added trim
	attribute at param elements to schema

2007-01-22  Martin Leidig  <mleidig@schlund.de>

	* projects/core/script/webservice_json.js: Fixed escaping of
	double quotes and backslashes.

2007-01-22  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* projects/core/schema/properties200401.xsd:
	Replaced xs:all with xs:sequence to solve boundary problems.

2007-01-19  Martin Leidig  <mleidig@schlund.de>

	* src/de/schlund/pfixcore/webservice/jsonws/BeanDescriptor.java: removed
	checking of getter return type against setter argument type, allow type
	discrepancy

2007-01-19  Jens Lautenbacher  <jtl@schlund.de>

	* projects/core/build/create_depend.xsl: Allow for more than one