@@ -1,3 +1,15 @@
+2007-01-23  Martin Leidig  <mleidig@schlund.de>
+
+	* src/de/schlund/pfixxml/targets/TargetGenerator.java: removed resetting
+	of TargetGenerationReport before each generation iteration (this caused
+	that generation exceptions were not reported in exception summary)
+	* src/de/schlund/pfixxml/ImageGeometry.java: avoid NullPointerException
+	if image doesn't exist, just proceed without the image information (it's
+	a common case cause in a lot of projects users wrongly use attribute
+	value templates within the image source attribute, which weren't yet
+	evaluated at the time the extension function is called, for the sake of
+	backwards compatibility we should still support this behaviour)
+
 2007-01-23  Sebastian Marsching  <sebastian.marsching@1und1.de>
 
 	* src/de/schlund/pfixcore/editor2/core/spring/ProjectFactoryServiceImpl.java (init): 
